--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@tiptap/pm": "^2.10.4",
+    "@tiptap/react": "^2.10.4",
+    "@tiptap/starter-kit": "^2.10.4",
+    "@types/react-datepicker": "^7.0.0",
     "mongodb": "^6.12.0",
     "next": "14.2.18",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18"
   },
   "devDependencies": {
