--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.18",
     "react": "^18",
     "react-datepicker": "^7.5.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-select": "^5.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
