--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tanstack/react-table": "^8.20.6",
     "@tiptap/pm": "^2.10.4",
     "@tiptap/react": "^2.10.4",
     "@tiptap/starter-kit": "^2.10.4",
     "@types/react-datepicker": "^7.0.0",
+    "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
     "next": "14.2.18",
     "react": "^18",
