--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
     "next": "14.2.18",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
