--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.12.0",
     "next": "14.2.18",
     "next-themes": "^0.4.4",
+    "qrcode.react": "^4.2.0",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
