--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^6.4.1",
     "@tanstack/react-table": "^8.20.6",
     "@tiptap/pm": "^2.10.4",
     "@tiptap/react": "^2.10.4",
