--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.1",
+    "@react-google-maps/api": "^2.20.5",
     "@tanstack/react-table": "^8.20.6",
     "@tiptap/pm": "^2.10.4",
     "@tiptap/react": "^2.10.4",
