--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
@@ -18,11 +19,17 @@
     "@tiptap/pm": "^2.10.4",
     "@tiptap/react": "^2.10.4",
     "@tiptap/starter-kit": "^2.10.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/react-datepicker": "^7.0.0",
+    "bcrypt": "^5.1.1",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
     "next": "14.2.18",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "qrcode.react": "^4.2.0",
     "react": "^18",
     "react-datepicker": "^7.5.0",
