--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react-datepicker": "^7.0.0",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
@@ -34,7 +36,9 @@
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
-    "react-select": "^5.9.0"
+    "react-select": "^5.9.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
