--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-google-maps/api": "^2.20.5",
     "@tanstack/react-table": "^8.20.6",
     "@tiptap/pm": "^2.10.4",
