--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.1",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@react-google-maps/api": "^2.20.5",
     "@tanstack/react-table": "^8.20.6",
     "@tiptap/pm": "^2.10.4",
@@ -38,6 +39,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-select": "^5.9.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
