--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "googleapis": "^144.0.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
     "next": "14.2.18",
