--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-select": "^5.9.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
